# ableos

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  ableos.elf
.cargo/: config.toml
.github/workflows/: rust.yml
ableos/: Cargo.toml  README.md  TODO.md
ableos/.cargo/: config.toml
ableos/.github/workflows/: rust.yml
ableos/json_targets/: .rustc_info.json  aarch64-ableos.json
ableos/keymaps/: empty.keymap  qwerty.keymap
ableos/notes/: GraphicsNote.md
ableos/shitty_code_to_rewrite/: signal.c
ableos/src/: kmain.rs  lib.rs  main.rs  panic.rs  print.rs
ableos/src/allocator/: mod.rs
ableos/src/arch/aarch32/: build.sh  init.rs  mod.rs  run.sh
ableos/src/arch/aarch64/: aarch64-qemu.ld  mod.rs  run.sh  serial.rs
ableos/src/arch/aarch64/drivers/: mod.rs  nrf52.rs  serial.rs
ableos/src/arch/ps_portable/: init.rs  mod.rs  simple_graphics.rs  timer.rs
ableos/src/arch/riscv/: mod.rs
ableos/src/arch/riscv/drivers/: graphics.rs  serial.rs
ableos/src/arch/x86_64/: allocator.rs  gdt.rs  init.rs  interrupts.rs  memory.rs  mod.rs
ableos/src/arch/x86_64/drivers/: allocator.rs  graphics.rs  mod.rs  serial.rs  vga.rs
ableos/src/driver_traits/: graphics.rs  serial.rs
ableos/src/experiments/: EXPLAIN.md  clip.rs  filesystem.txt  kinfo.rs  mail.rs  pkg.rs  server.rs  systeminfo.rs
ableos/src/keyboard/: abstractions.rs  small_types.rs
ableos/src/relib/: mod.rs
ableos/src/relib/math/rand/: linearshift.rs  mod.rs  prand.rs  wichmanhillrand.rs
ableos/src/relib/time/: kilotime.rs  mod.rs
json_targets/: aarch64-ableos.json  arm-ableos.json
notes/: NOTES.md  USER.md
repbuild/: Cargo.toml  README.md
repbuild/src/: main.rs
shitty_code_to_rewrite/: shutdown.rs  shutdown_in_c.c
src/: kmain.rs  lib.rs  main.rs  panic.rs  print.rs  time.rs
src/allocator/: mod.rs
src/arch/aarch32/: boot.s  init.rs  mod.rs
src/arch/aarch64/: mod.rs  run.sh
src/arch/arm/: build.sh  init.rs  mbox.rs  mod.rs  run.sh
src/arch/ps_portable/: mod.rs  simple_graphics.rs  timer.rs
src/arch/riscv/asm/: boot.asm
src/arch/x86_64/: alloc.rs  build.sh  debug.sh  gdt.rs  init.rs  interrupts.rs  mod.rs  run.sh  serial.rs
src/arch/x86_64/.runners/: run-test.sh
src/arch/x86_64/drivers/: graphics.rs  mod.rs  serial.rs  vga.rs
src/arch/x86_64/init/: mod.rs
src/driver_traits/: device.rs  graphics.rs  mod.rs  mouse.rs  serial.rs
src/experiments/: clip.rs  entropy.rs  file.rs  keymap.rs  kinfo.rs  mail.rs  mod.rs  qwerty.keymap  schedule.rs  server.rs  syscalls.md  systeminfo.rs  user.rs  virtual_memory.rs  wm.rs
src/keyboard/: abstractions.rs  generic.rs  layout.rs  mod.rs  scancode.rs  small_types.rs  traits.rs  types.rs
src/relib/: mod.rs
src/relib/math/rand/: mod.rs  (+3 more)
src/relib/time/: kilotime.rs  mod.rs
src/time/: kilotime.rs  mod.rs
