[package]
name = "ableos"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"

[dependencies]
# bootloader = "0.9.8"
# cpuio = { git = "https://github.com/anyusernameworks/cpuio.git" }

[dependencies.able-graphics-lib]
git = "https://github.com/AbleTheAbove/able-graphics-lib"



[target.'cfg(x86_64)'.dependencies]
bootloader = "0.9.8"
