[package]
name = "ableos"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"


[dependencies]
spin = "0.5.2"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[target.'cfg(target_arch = "mips")'.dependencies]
psp = "0.1.5"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.9.8"
cpuio = { git = "https://github.com/anyusernameworks/cpuio.git" }

[dependencies.able-graphics-lib]
git = "https://github.com/AbleTheAbove/able-graphics-lib"
